objects/BMCServiceDesk__BMC_DataBaseStorage__c.object
<CustomObject>
    <description>BMC_DataBaseStorage. CMDB Class that stores information about a collection of logical storage areas that hold and retain data. You model database storage CIs as an instance of the BMC_DataBaseStorage class (derived from the BMC_FileSystem class), and identify the instance by its Name and SystemName attributes. The BMC_DataBaseStorage class extends a file system CI and uses its inherited associations to represent the internal structure of the database. This class corresponds to the DMTF class CIM_DatabaseStorage.</description>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Is_System_Area__c</fullName>
        <label>Is System Area</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Last_Backup_Time__c</fullName>
        <label>Last Backup Time</label>
        <type>DateTime</type>
    </fields>
    <label>Database Storage</label>
    <nameField>
        <label>Database Storage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Database Storages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>